--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   ],
   "dependencies": {
     "http-proxy": "1.11.1",
-    "proxy-from-env": "0.0.1"
+    "proxy-from-env": "0.0.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.6",
